<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="krunal.com.example.cameraapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_scan"
        android:name="krunal.com.example.cameraapp.ui.GalleryFragment"
        android:label="@string/menu_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="krunal.com.example.cameraapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_parking" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="krunal.com.example.cameraapp.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_share"
        android:name="krunal.com.example.cameraapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_violation" />

    <fragment
        android:id="@+id/nav_send"
        android:name="krunal.com.example.cameraapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_report" />

</navigation>