<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_menu_AddG"
            android:title="Add Guest" />
        <item
            android:id="@+id/nav_slideshow"
            android:enabled="true"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

    </group>

    <item android:title="Violations">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Report to Guards" />

        </menu>
    </item>
    <item android:title="Settings">
        <menu>

            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_tools" />
        </menu>
    </item>

</menu>
